--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Contact</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <h1>My Contact Details</h1>
     <p>My Fictional Address</p>
     <p>017575027106</p>
     <p>shohan2003@gmail.com</p>
-    <hr>
-    <form action="mailto:greatshohan900@gmail.com" method="post" enctype="text/plain">
+    <hr />
+    <form
+      action="mailto:greatshohan900@gmail.com"
+      method="post"
+      enctype="text/plain"
+    >
       <label>Your Name:</label>
-      <input type="text" name="yourName" value=""><br>
+      <input type="text" name="yourName" value="" /><br />
       <label>Your Email:</label>
-      <input type="email" name="yourEmail" value=""><br>
-      <label>Your Message:</label><br>
-      <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-      <input type="submit" name="">
+      <input type="email" name="yourEmail" value="" /><br />
+      <label>Your Message:</label><br />
+      <textarea name="yourMessage" rows="10" cols="30"></textarea><br />
+      <input type="submit" name="" />
     </form>
   </body>
 </html>
