--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shohan's personal site</title>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body style="background-color: #eaf6f6">
+  <body>
     <table cellspacing="20">
       <tr>
         <td><img src="abc.jpg" alt="Burger Pic" /></td>
