--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
               ></em
             >
           </p>
-          <p>
-            I am a prodigy and a wannabe engineer and web dev, I love hot girls
-            and junk food
-          </p>
+          <p>A wannabe engineer and web dev, I love hot girls and junk food</p>
         </td>
       </tr>
     </table>
@@ -38,7 +35,7 @@
     <hr />
     <h3>Work experience</h3>
 
-    <table border="1">
+    <table>
       <thead>
         <tr>
           <th>Dates</th>
@@ -60,11 +57,11 @@
     <table>
       <tr>
         <td>Desktop development</td>
-        <td>***</td>
+        <td>⭐️⭐️⭐️</td>
       </tr>
       <tr>
         <td>Web Dev</td>
-        <td>*****</td>
+        <td>⭐️⭐️⭐️⭐️</td>
       </tr>
     </table>
 
