--- a/hobby.html
+++ b/hobby.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h3>My Hobbies</h3>
@@ -12,6 +13,10 @@
       <li>Programming</li>
       <li><a href="https://www.youtube.com/watch?v=gtWuy6JuDzU">Youtube</a></li>
       <li>Watching Movies</li>
+      <img
+        class="sword cross"
+        src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/285/crossed-swords_2694-fe0f.png"
+      />
     </ol>
   </body>
 </html>
